# scenic_driver_skia

./: .gitignore  AGENTS.md  ASSETS.md  CLAUDE.md  Cargo.toml  GUIDES.md  PLAN.md  README.md  mix.exs
config/: config.exs
lib/: driver.ex  scenic_driver_skia.ex
lib/scenic/driver/: skia.ex
lib/scenic/driver/skia/: assets.ex  native.ex
lib/scenic_driver_skia/: driver.ex  native.ex
native/scenic_driver_skia/: Cargo.toml
native/scenic_driver_skia/src/: backend.rs  drm_backend.rs  drm_input.rs  input.rs  input_translate.rs  kms_backend.rs  lib.rs  raster_backend.rs  renderer.rs
scripts/: bench_script_ingest.exs  demo_clock_raster.exs  demo_drm.exs  demo_raster.exs  demo_wayland.exs  stress.exs  stress_wayland.exs
src/: main.rs
test/: driver_input_events_test.exs  driver_lifecycle_test.exs  driver_logging_test.exs  driver_options_test.exs  driver_raster_primitives_test.exs  driver_script_serialization_test.exs  test_helper.exs
test/support/: view_port_helper.exs
