[package]
name = "scenic_driver_skia"
version = "0.1.0"
edition = "2024"

[lib]
name = "scenic_driver_skia"
crate-type = ["cdylib"]

[dependencies]
rustler = "0.37"
winit = "0.30"
glutin = "0.32"
glutin-winit = "0.5"
raw-window-handle = "0.6"
gl = "0.14"
drm = "0.12"

# Skia on Wayland via EGL:
skia-safe = { version = "0.91.1", features = ["wayland", "embed-freetype"] }
