[package]
name = "scenic_driver_skia"
version = "0.1.0"
edition = "2024"

[lib]
name = "scenic_driver_skia"
crate-type = ["cdylib"]

[dependencies]
rustler = "0.37"
winit = "0.30"
glutin = "0.32"
glutin-winit = "0.5"
raw-window-handle = "0.6"
gl = "0.14"
drm = "0.14"
gbm = { version = "0.18", features = ["drm-support"] }
glutin_egl_sys = "0.7"
libloading = "0.8"
evdev = "0.12"
libc = "0.2"

# Skia on Wayland via EGL:
skia-safe = { version = "0.91.1", default-features = false, features = ["wayland", "embed-freetype", "binary-cache"] }
